--- a/src/components/GeneralHint/style.module.scss
+++ b/src/components/GeneralHint/style.module.scss
@@ -1,10 +1,10 @@
 .generalHint {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
-  padding: 20px;
+  padding: 30px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   font-size: 24px;
@@ -23,5 +23,28 @@
   to {
     opacity: 1;
     transform: translate(-50%, -50%);
+  }
+}
+.openButton {
+  display: block; /* Делаем кнопку блочным элементом */
+  margin: auto; /* Отступ сверху и снизу, прижимаем к правому краю с отступом */
+  padding: 10px 20px;
+  border: none;
+  border-radius: 25px;
+  background-color: #dc3545; // Красный цвет
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease, transform 0.2s ease;
+
+  &:hover {
+    background-color: #c82333; // Темнее красный при наведении
+    transform: scale(1.05); // Увеличение при наведении
+  }
+
+  &:active {
+    transform: scale(0.95); // Уменьшение при нажатии
   }
 }
