--- a/src/components/GeneralHint/style.module.scss
+++ b/src/components/GeneralHint/style.module.scss
@@ -48,3 +48,40 @@
     transform: scale(0.95); // Уменьшение при нажатии
   }
 }
+.resetIcon {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  border: none;
+  border-radius: 50%;
+  background-color: #dc3545;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  line-height: 1;
+
+  &:hover {
+    background-color: #c82333;
+  }
+}
+.compactText {
+  font-size: 14px; /* Меньший шрифт */
+  margin: 0; /* Убираем отступы */
+  color: #333;
+}
+
+.compactButton {
+  padding: 6px 12px; /* Меньшие размеры кнопки */
+  font-size: 12px; /* Меньший шрифт */
+  background: #c82333;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
