--- a/src/components/GameStadia/stayle.module.css
+++ b/src/components/GameStadia/stayle.module.css
@@ -60,3 +60,45 @@
 .hidden {
   display: none; /* Скрытие невыбранных стадий */
 }
+
+.prizeInputContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 15px;
+  background: #f5f5f5;
+  border-radius: 8px;
+}
+
+.input {
+  color: black;
+  padding: 8px 12px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.button {
+  padding: 8px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #45a049;
+}
+
+.disabledButton {
+  opacity: 0.5;
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.disabledButton:hover {
+  background-color: #ccc;
+}
